📏Fixed Header Alignment

--- a/src/components/Licensing.scss
+++ b/src/components/Licensing.scss
@@ -7,51 +7,3 @@
     margin: 0px auto;
     text-align: left;
 }
-
-@media only screen and (max-width: 850px) {
-    .Licensing {
-        padding: 0;
-    }
-}
-
-@media only screen and (max-width: 750px) {
-    .Licensing {
-        >h2 {
-            font-size: 1.25em;
-        }
-        >h3 {
-            font-size: 1em;
-        }
-        >p {
-            font-size: 0.9em;
-        }
-        >ul {
-            font-size: 0.8em;
-        }
-    }
-}
-
-@media only screen and (max-width: 375px) {
-    .Licensing {
-        >h3 {
-            font-size: 0.9em;
-        }
-    }
-}
-
-@media only screen and (max-width: 360px) {
-    .Licensing {
-        >h2 {
-            font-size: 0.95em;
-        }
-        >h3 {
-            font-size: 0.8em;
-        }
-        >p {
-            font-size: 0.8em;
-        }
-        >ul {
-            font-size: 0.7em;
-        }
-    }
-}
